연결버튼 누르면 저노하가 걸리도록  => Fragment에서 액티비티의 코드를 짜듯이 표현

--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -45,6 +45,7 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/phoneNumEdt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -52,12 +53,10 @@
             android:inputType="phone"/>
 
         <Button
+            android:id="@+id/dialBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="연결" />
-
-
-
 
 
     </LinearLayout>
